<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/black"
    android:id="@+id/parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation= "vertical"
            android:gravity="top"
            android:background="@color/black">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/hey"
        app:lottie_autoPlay="true"
        android:id="@+id/lottie"
        app:lottie_loop="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pincodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="#AE323131"
        app:hintTextColor="#AE323131"
        android:backgroundTint="#C8C3C3"
        android:layout_marginTop="16dp"
        android:hint="Enter Pin Code"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/pincodeEditText"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:backgroundTint="#C8C3C3"
            android:textSize="16sp"
            android:inputType="number"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_hint"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/interval_group"
            >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/time_1"
            android:text="@string/_1_min"
            />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_3"
                android:textColor="@color/white"
                android:text="@string/_3_min"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_5"
                android:textColor="@color/white"
                android:text="@string/_5_min"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_10"
                android:textColor="@color/white"
                android:text="@string/_10_min"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_age_group"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/age_group"
            >
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/age_18"
                android:text="@string/_18"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_45"
                android:textColor="@color/white"
                android:text="@string/_45"
                />
        </RadioGroup>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/add_to_list"
        android:textColor="@color/white"
        android:id="@+id/submit_button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entered_pincodes"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/entered_pincode_list"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/list_item_pin"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by_ashish"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="10sp"
                app:drawableStartCompat="@drawable/ic_baseline_favorite_24" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_slot_fab"
        android:text="Slot booking"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        app:icon="@drawable/ic_round_edit_calendar_24"
        app:iconTint="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        />
</FrameLayout>